# advent_of_code

./: .gitignore  Cargo.toml  LICENSE  README.md
.aoc/: init_day.sh  template.rs  test_template.rs
src/: error.rs  lib.rs  main.rs  solver.rs
src/util/: direction.rs  grid.rs  point.rs
src/year2019/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  int_code_computer.rs  op_code.rs
src/year2022/: day01.rs
src/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs
src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs
src/year2025/: day01.rs
tests/: test.rs
tests/util/: direction_test.rs
tests/year2019/: day01_test.rs  day02_test.rs  day03_test.rs  day04_test.rs  day05_test.rs  day06_test.rs  day07_test.rs  day08_test.rs  day09_test.rs  day10_test.rs  day11_test.rs
tests/year2023/: day01_test.rs  day02_test.rs  day03_test.rs  day04_test.rs  day05_test.rs  day06_test.rs  day07_test.rs  day08_test.rs  day09_test.rs  day10_test.rs  day11_test.rs  day12_test.rs  day13_test.rs  day14_test.rs  day15_test.rs  day16_test.rs  day17_test.rs  day18_test.rs  day19_test.rs  day20_test.rs  day21_test.rs  (+2 more)
util/: init_day.sh  template.rs  test_template.rs
(+22 files in other folders)
