[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
colored = "2.1.0"
grid = "0.12.0"
itertools = "0.12.0"
log = "0.4.21"
num = "0.4.1"
pathfinding = "4.6.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
thiserror = "1.0.50"

[dependencies.simple_logger]
version = "4.3.3"
default-features = false
features = ["colors"]
